--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+:root {
+  --bg-color: #F9F4F0; /* 배경색 */
+  --main-color: #014421; /* 메인 텍스트 색상 */
+  --sub-color: #EAC109; /* 서브 색상 */
+}
+
+body {
+  background-color: var(--bg-color); /* 변수로 배경색 설정 */
+  font-family: 'Pretendard', sans-serif; /* 전역 폰트 */
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
 }
