[bugfix]mobile nav중복, desktop footer 홈버튼 안눌리는 현상 수정& 공간확보

--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,9 @@ body {
     transform: rotate(360deg);
   }
 }
+
+@media (min-width: 481px) {
+  .main-contents {
+    margin-right: 60px; /* 데스크탑 sidebar 공간 확보 */
+  }
+}
