[css] 출판사 스타일 수정

--- a/src/Pages/post/component/booSearchDialog.style.css
+++ b/src/Pages/post/component/booSearchDialog.style.css
@@ -126,7 +126,9 @@
     margin-bottom: 5px;
 }
 
-.dialog-content ul li div .book-author {
+.dialog-content ul li div .book-author,
+.dialog-content ul li div .book-publisher
+{
     font-size: 14px;
     color: gray;
 }
