--- a/src/Pages/post/component/bookSearchDialog.style.css
+++ b/src/Pages/post/component/bookSearchDialog.style.css
@@ -15,8 +15,8 @@
     background-color: white;
     border-radius: 8px;
     width: 80%;
-    height: 60%;
-    max-width: 600px;
+    height: 80%;
+    max-width: 1000px;
     max-height: 80vh; /* 화면 높이의 80%로 제한 */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     padding: 0 20px 20px; /* 헤더와 리스트 여백 설정 */
@@ -24,6 +24,7 @@
     overflow-y: auto; /* 세로 스크롤 활성화 */
     box-sizing: border-box; /* 패딩과 border를 박스 크기에 포함 */
     position: relative; /* 검색창 기준이 되도록 설정 */
+    margin-right: 60px;
 }
 
 /* 스크롤바 숨기기 */
