--- a/src/App.css
+++ b/src/App.css
@@ -55,5 +55,10 @@ body {
   .main-contents {
     margin-right: 60px; /* 데스크탑 sidebar 공간 확보 */
   }
+}
 
+@media (max-width: 480px) {
+  .main-contents {
+    margin-right: 0 !important; /* 초기화 */
+  }
 }
