--- a/src/Pages/post/component/bookSearchDialog.style.css
+++ b/src/Pages/post/component/bookSearchDialog.style.css
@@ -82,10 +82,26 @@
     margin-top: 10px;
     padding: 10px 15px;
     font-size: 16px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
     box-sizing: border-box;
     background-color: white;
+    transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+.search-input:focus {
+    outline: none;
+    border-color: #878787;
+    box-shadow: 0 0 5px #ccc;
+}
+
+.search-input:placeholder {
+    color: #aaa;
+    font-style: italic;
+}
+
+.search-input:focus::placeholder {
+    color: transparent; /* 포커스 상태에서 placeholder 숨기기 */
 }
 
 /* 다이얼로그 닫기 버튼 */
