--- a/src/Pages/search/postSearch.style.css
+++ b/src/Pages/search/postSearch.style.css
@@ -54,6 +54,10 @@
   display: flex;
   align-items: center;
   margin-top: 20px;
+  max-width: 1200px;
+  /* 중앙 정렬 */
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .today-popular {
