--- a/src/common/style/common.style.css
+++ b/src/common/style/common.style.css
@@ -1,8 +1,3 @@
-/* .swiper {
-  width: 100%;
-  height: 100%;
-} */
-
 .swiper-slide {
   height: 50vh;
   text-align: center;
@@ -17,8 +12,6 @@
 
 .swiper-slide img {
   display: block;
-  /* width: 100%;
-  height: 100%; */
   object-fit: cover;
 }
 
@@ -90,7 +83,6 @@
   display: none;
 }
 
-
 /* 반응형 스타일: 모바일 화면에서만 적용 */
 @media (max-width: 480px) {
   /* 데스크탑 사이드바를 숨기고 모바일 푸터를 표시 */
@@ -134,8 +126,6 @@
   }
 }
 
-
-
 .desktop-navbar {
   background-color: var(--bg-color);
   position: fixed;
@@ -158,8 +148,8 @@
 }
 
 .navbar-icon img {
-  width: 28px;
-  height: 28px;
+  width: 50px;
+  margin-top: 10px;
 }
 
 .fontup {
@@ -195,6 +185,10 @@
 .mobile-navbar-icon img {
   width: 28px;
 }
+.mobile-navbar-logo{
+  width: 35px !important;
+  margin-top: 5px;
+}
 
 /* 중앙 텍스트 */
 .navbar-title {
@@ -205,7 +199,7 @@
   font-size: 1.7rem;
   font-weight: bold;
   text-align: center;
-  pointer-events: none; /* 중앙 텍스트 클릭 방지 */
+  cursor: pointer;
 }
 
 .navbar-right {
@@ -221,19 +215,15 @@
   right: 0;
   background-color: var(--bg-color);
   z-index: 9999;
-  /* padding: 10px; */
 }
 
 .search-input-box {
-  
   display: flex;
   align-items: center;
-  /* justify-content: space-between; */
   padding: 10px 10px 0 10px;
 }
 
 .nav-search-input {
-  /* flex-grow: 1; */
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 5px;
