--- a/src/Pages/post/component/bestSellerList.style.css
+++ b/src/Pages/post/component/bestSellerList.style.css
@@ -5,7 +5,7 @@
 }
 
 .popular-books-title {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: bold;
   margin-bottom: 16px;
   color: #333;
@@ -57,5 +57,11 @@
   .grid-container {
     grid-template-columns: repeat(3, 1fr); /* 작은 모바일 화면: 한 줄에 2개 */
     gap:5px;
+  }
+  .popular-books-title {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 16px;
+    color: #333;
   }
 }
