--- a/src/Pages/search/postSearch.style.css
+++ b/src/Pages/search/postSearch.style.css
@@ -97,11 +97,12 @@
   display: flex;
   overflow: hidden;
   position: relative;
+  
 }
 
 .carousel-slide {
   flex-shrink: 0;
-  width: 200px; /* Adjust to fit 4 slides */
+  width: 200px;
   height: 300px;
   margin-right: 10px;
   transition: transform 0.5s ease-in-out;
@@ -112,6 +113,12 @@
   height: 100%;
   object-fit: cover;
 }
+
+.carousel-viewport {
+  width: 830px;
+  overflow: hidden; /* 중요: 영역을 벗어나는 내용을 숨김 */
+}
+
 
 .carousel-button {
   position: absolute;
