--- a/src/Pages/search/postSearch.style.css
+++ b/src/Pages/search/postSearch.style.css
@@ -65,17 +65,41 @@
   font-weight: bold;
   padding: 20px;
   line-height: 1.3;
-  width: 230px;
-  height: 420px;
+  /* width: 230px;
+  height: 420px; */
+  width: clamp(100px, 25vw, 230px);
+  height: calc(1 / 2.5 * 100vw);
+
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
-}
+} 
+
+/* .today-popular {
+  background-color: var(--main-color);
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 20px;
+  line-height: 1.3;
+  width: clamp(100px, 25vw, 230px);
+  height: calc(1 / 2 * 100vw); 
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+} 
+*/
+
 
 .today-popular p {
   margin: 0;
   white-space: pre-line;
   font-size: 1.9rem;
+}
+
+.today-popular-text {
+  color: var(--main-color);
+  font-weight: bold;
 }
 
 .carousel-container {
@@ -129,6 +153,20 @@
   width: 15px; 
 }
 
+
+@media (min-width:1031px) {
+  .today-popular-text {
+    display: none;
+  }
+}
+@media (max-width:1030px) and (min-width:481px) {
+  .today-popular {
+    display: none;
+  }
+  .popular-books-container {
+    margin-left: 150px;
+  }
+}
 /* mobile-version */
 @media (max-width: 480px) {
   .desktop-search-results {
